--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		
 	<table cellspacing="10">
 	<tbody width="60%"><tr>
-	<td><img id="image" src="./index_files/headshot.png" width="200"></td>
+	<td><img id="image" src="./index_files/headshot2.png" width="250"></td>
 	<td> I am a Post-Doctoral Researcher at <a href="https://www.mpi-inf.mpg.de/home/">Max-Planck Institute for Informatics</a>, working with  <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Christian Theobalt</a>. Previously, 
 		I was a Ph.D. student in the <a href="https://www.cse.iitb.ac.in/">Department of Computer Science</a>, IIT Bombay where I was advised by <a href="http://arjunjain.co.in/" target="_blank">Arjun Jain</a> and <a href="https://www.cse.iitb.ac.in/~ganesh">Ganesh Ramakrishnan</a> on research topics revolving around human pose estimation from images/video. Prior to this, I spent 
 		four beautiful undergrad years at the Indian Institute of Information Technology <a href="https://www.iiitdmj.ac.in/" target="_blank">(IIIT)</a> Jabalpur.  <br><br>
