--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
 		<table cellspacing="10">
 			<tbody> 
 				<tr>
+							<td><img id="gif" src="./index_files/motion_result.gif" width="200"></td>
+								
+							<td align="left"><a href="https://vcai.mpi-inf.mpg.de/ROAM/"><font size="4"><b>ROAM: Robust and Object-aware Motion Generation using Neural Pose Descriptors</b></font></a><br>
+									Wanyue Zhang, <i>Rishabh Dabral</i>, Thomas Leimkuehler, Vladislav Golyanik, Marc Habermann, Christian Theobalt<br>
+									Pre-print
+									<br>
+							</td>
+							
+				</tr>
+				<tr>
 							<td><img id="image" src="./index_files/mofusion_teaser_website.png" width="200"></td>
 							<td align="left"><a href="https://vcai.mpi-inf.mpg.de/MoFusion/"><font size="4"><b>MoFusion: A Framework for Denoising-Diffusion-based Motion Synthesis</b></font></a><br>
 									<i>Rishabh Dabral</i>, Muhammad Hamza Mughal, Vladislav Golyanik, Christian Theobalt<br>
