--- a/index.html
+++ b/index.html
@@ -216,9 +216,11 @@
 	<hr>
 	<table cellspacing="10">
 			<tbody>
-				<tr><td>Spring 2019: Teaching Assistant for <a href="https://github.com/cs763/Spring2019">CS763 - Computer Vision</a></td></tr>
-				<tr><td>Spring 2018: Teaching Assistant for <a href="https://github.com/cs763/Spring2018">CS763 - Computer Vision</a></td></tr>
-				<tr><td>Spring 2017: Teaching Assistant for <a href="https://www.cse.iitb.ac.in/~cs725/">CS725 - Foundations of Machine Learning</a></td></tr>
+				<tr><td style="width: 160px">Summer 2024: </td><td>Co-Instructor for <a href="https://vcai.mpi-inf.mpg.de/teaching/vcai_seminar_2024/topics.html">Classical Concepts of Computer Vision and
+					Computer Graphics in the Neural Age</a></td></tr>
+				<tr><td style="width: 160px">Spring 2019: </td><td>Teaching Assistant for <a href="https://github.com/cs763/Spring2019">CS763 - Computer Vision</a></td></tr>
+				<tr><td style="width: 160px">Spring 2018: </td><td>Teaching Assistant for <a href="https://github.com/cs763/Spring2018">CS763 - Computer Vision</a></td></tr>
+				<tr><td style="width: 160px">Spring 2017: </td><td>Teaching Assistant for <a href="https://www.cse.iitb.ac.in/~cs725/">CS725 - Foundations of Machine Learning</a></td></tr>
 			</tbody>
 		</table>
 		
