more details convofusion

--- a/index.html
+++ b/index.html
@@ -44,15 +44,18 @@
 		<table cellspacing="10">
 			<tbody> 
 				<tr>
-					<td><img id="gif" src="./index_files/convofusion.gif" width="200"></video></td>
+					<!-- <td><img id="gif" src="./index_files/convofusion.gif" width="200"></video></td> -->
+					<td><video autoplay muted width="200" loop>
+						<source src="./index_files/convofusion.mp4" type="video/mp4">
+					</video></td>
 
 						
-					<td align="left"><a href="#"><font size="4"><b>	
+					<td align="left"><a href="https://vcai.mpi-inf.mpg.de/projects/ConvoFusion/"><font size="4"><b>	
 						ConvoFusion: Multi-Modal Conversational Diffusion for Co-Speech Gesture Synthesis</b></font></a><br>
 							Muhammad Hamza Mughal, <i>Rishabh Dabral</i>, Ikhsanul Habibie, Lucia Donatelli, Marc Habermann, Christian Theobalt<br>
 							<i>Computer Vision and Pattern Recognition (CVPR), 2024, Seattle</i><br>
-							<a href="#">[Details Soon]</a>
-							<!-- <a href="https://arxiv.org/pdf/2311.17057.pdf">[Arxiv]</a> -->
+							<a href="https://vcai.mpi-inf.mpg.de/projects/ConvoFusion/">[Project Page]</a>
+							<a href="https://arxiv.org/abs/2403.17936">[Arxiv]</a>
 							<!-- <a href="https://vcai.mpi-inf.mpg.de/projects/ROAM/videos/main_video_website.mp4">[Video]</a> -->
 							<br>
 					</td>							
