--- a/index.html
+++ b/index.html
@@ -44,6 +44,23 @@
 		<table cellspacing="10">
 			<tbody> 
 				<tr>
+					<td><img id="image" src="./index_files/metacap.png" width="200"></img></td>
+					<!-- <td><video autoplay muted width="200" loop>
+						<source src="./index_files/metacap.mp4" type="video/mp4"> -->
+					</video></td>
+
+						
+					<td align="left"><a href="https://vcai.mpi-inf.mpg.de/projects/MetaCap/"><font size="4"><b>	
+						METACAP: Meta-learning Priors from Multi-View Imagery for Sparse-view Human Performance Capture and Rendering</b></font></a><br>
+							Guoxing Sun, <i>Rishabh Dabral</i>, Pascal Fua, Christian Theobalt, Marc Habermann<br>
+							<!-- <i>Computer Vision and Pattern Recognition (CVPR), 2024, Seattle</i><br> -->
+							<a href="https://vcai.mpi-inf.mpg.de/projects/MetaCap/">[Project Page]</a>
+							<a href="https://arxiv.org/pdf/2403.18820.pdf">[Arxiv]</a>
+							<!-- <a href="https://vcai.mpi-inf.mpg.de/projects/ROAM/videos/main_video_website.mp4">[Video]</a> -->
+							<br>
+					</td>							
+				</tr>
+				<tr>
 					<!-- <td><img id="gif" src="./index_files/convofusion.gif" width="200"></video></td> -->
 					<td><video autoplay muted width="200" loop>
 						<source src="./index_files/convofusion.mp4" type="video/mp4">
