--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 						
 					<td align="left"><a href="https://vcai.mpi-inf.mpg.de/projects/MetaCap/"><font size="4"><b>	
-						METACAP: Meta-learning Priors from Multi-View Imagery for Sparse-view Human Performance Capture and Rendering</b></font></a><br>
+						MetaCap: Meta-learning Priors from Multi-View Imagery for Sparse-view Human Performance Capture and Rendering</b></font></a><br>
 							Guoxing Sun, <i>Rishabh Dabral</i>, Pascal Fua, Christian Theobalt, Marc Habermann<br>
 							<!-- <i>Computer Vision and Pattern Recognition (CVPR), 2024, Seattle</i><br> -->
 							<a href="https://vcai.mpi-inf.mpg.de/projects/MetaCap/">[Project Page]</a>
