--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<table cellspacing="10">
 	<tbody width="60%"><tr>
 	<td><img id="image" src="./index_files/headshot2.png" width="250"></td>
-	<td> I am a Post-Doctoral Researcher at <a href="https://www.mpi-inf.mpg.de/home/">Max-Planck Institute for Informatics</a>, working with  <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Christian Theobalt</a>. Previously, 
+	<td> I am a post-doctoral researcher at <a href="https://www.mpi-inf.mpg.de/home/">Max-Planck Institute for Informatics</a>, working with  <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Christian Theobalt</a>. Previously, 
 		I was a Ph.D. student in the <a href="https://www.cse.iitb.ac.in/">Department of Computer Science</a>, IIT Bombay where I was advised by <a href="http://arjunjain.co.in/" target="_blank">Arjun Jain</a> and <a href="https://www.cse.iitb.ac.in/~ganesh">Ganesh Ramakrishnan</a> on research topics revolving around human pose estimation from images/video. Prior to this, I spent 
 		four beautiful undergrad years at the Indian Institute of Information Technology <a href="https://www.iiitdmj.ac.in/" target="_blank">(IIIT)</a> Jabalpur.  <br><br>
 				
@@ -73,6 +73,7 @@
 							<i>Computer Vision and Pattern Recognition (CVPR), 2024, Seattle</i><br>
 							<a href="https://vcai.mpi-inf.mpg.de/projects/ConvoFusion/">[Project Page]</a>
 							<a href="https://arxiv.org/abs/2403.17936">[Arxiv]</a>
+							<a href="https://github.com/m-hamza-mughal/convofusion">[Code]</a>
 							<!-- <a href="https://vcai.mpi-inf.mpg.de/projects/ROAM/videos/main_video_website.mp4">[Video]</a> -->
 							<br>
 					</td>							
