--- a/index.html
+++ b/index.html
@@ -53,9 +53,21 @@
 					<td align="left"><a href="https://vcai.mpi-inf.mpg.de/projects/MetaCap/"><font size="4"><b>	
 						MetaCap: Meta-learning Priors from Multi-View Imagery for Sparse-view Human Performance Capture and Rendering</b></font></a><br>
 							Guoxing Sun, <i>Rishabh Dabral</i>, Pascal Fua, Christian Theobalt, Marc Habermann<br>
-							<!-- <i>Computer Vision and Pattern Recognition (CVPR), 2024, Seattle</i><br> -->
+							<i>European Conference on Computer Vision (ECCV), 2024, Milan</i><br>
 							<a href="https://vcai.mpi-inf.mpg.de/projects/MetaCap/">[Project Page]</a>
 							<a href="https://arxiv.org/pdf/2403.18820.pdf">[Arxiv]</a>
+							<!-- <a href="https://vcai.mpi-inf.mpg.de/projects/ROAM/videos/main_video_website.mp4">[Video]</a> -->
+							<br>
+					</td>							
+				</tr>
+				<tr>
+					<td><img id="gif" src="./index_files/remos.gif" width="200"></video></td>
+
+						
+					<td align="left"><a href="https://vcai.mpi-inf.mpg.de/projects/remos/"><font size="4"><b>ReMoS: Reactive 3D Motion Synthesis for Two-Person Interactions</b></font></a><br>
+							Anindita Ghosh, <i>Rishabh Dabral</i>, Vladislav Golyanik, Christian Theobalt, Philipp Slusallek<br>
+							<i>European Conference on Computer Vision (ECCV), 2024, Milan</i><br>
+							<a href="https://vcai.mpi-inf.mpg.de/projects/remos/">[Project Page]</a><a href="https://arxiv.org/pdf/2311.17057.pdf">[Arxiv]</a>
 							<!-- <a href="https://vcai.mpi-inf.mpg.de/projects/ROAM/videos/main_video_website.mp4">[Video]</a> -->
 							<br>
 					</td>							
@@ -74,18 +86,6 @@
 							<a href="https://vcai.mpi-inf.mpg.de/projects/ConvoFusion/">[Project Page]</a>
 							<a href="https://arxiv.org/abs/2403.17936">[Arxiv]</a>
 							<a href="https://github.com/m-hamza-mughal/convofusion">[Code]</a>
-							<!-- <a href="https://vcai.mpi-inf.mpg.de/projects/ROAM/videos/main_video_website.mp4">[Video]</a> -->
-							<br>
-					</td>							
-				</tr>
-				<tr>
-					<td><img id="gif" src="./index_files/remos.gif" width="200"></video></td>
-
-						
-					<td align="left"><a href="https://vcai.mpi-inf.mpg.de/projects/remos/"><font size="4"><b>ReMoS: Reactive 3D Motion Synthesis for Two-Person Interactions</b></font></a><br>
-							Anindita Ghosh, <i>Rishabh Dabral</i>, Vladislav Golyanik, Christian Theobalt, Philipp Slusallek<br>
-							<!-- <i>International Conference on 3D Vision (3DV), 2024, Davos</i><br> -->
-							<a href="https://vcai.mpi-inf.mpg.de/projects/remos/">[Project Page]</a><a href="https://arxiv.org/pdf/2311.17057.pdf">[Arxiv]</a>
 							<!-- <a href="https://vcai.mpi-inf.mpg.de/projects/ROAM/videos/main_video_website.mp4">[Video]</a> -->
 							<br>
 					</td>							
