--- a/index.html
+++ b/index.html
@@ -31,13 +31,35 @@
 	<table cellspacing="10">
 	<tbody width="60%"><tr>
 	<td><img id="image" src="./index_files/headshot2.png" width="250"></td>
-	<td> I am a post-doctoral researcher at <a href="https://www.mpi-inf.mpg.de/home/">Max-Planck Institute for Informatics</a>, working with  <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Christian Theobalt</a>. Previously, 
-		I was a Ph.D. student in the <a href="https://www.cse.iitb.ac.in/">Department of Computer Science</a>, IIT Bombay where I was advised by <a href="http://arjunjain.co.in/" target="_blank">Arjun Jain</a> and <a href="https://www.cse.iitb.ac.in/~ganesh">Ganesh Ramakrishnan</a> on research topics revolving around human pose estimation from images/video. Prior to this, I spent 
-		four beautiful undergrad years at the Indian Institute of Information Technology <a href="https://www.iiitdmj.ac.in/" target="_blank">(IIIT)</a> Jabalpur.  <br><br>
-				
-	</td>
+	<td>
+		<paragraph><font color="red">News:</font> I started as a Research Group Leader at MPI for Informatics in August 2024.</paragraph>
+		<br><br>
+		I am leading the "3D Visual Intelligence" Research Group at the <a href="https://www.mpi-inf.mpg.de/home/">Max-Planck Institute for Informatics</a>. 
+		My research interests lie in the intersection of computer vision, computer graphics, multi-modal interactions. I am particularly interested in developing algorithms for 3D human performance capture and synthesis.
+		Some research questions that we are currently exploring include:<br>
+		<ul>
+			<li>Human Motion Synthesis for Animation and Robotics</li>
+			<li>Human-Object Interaction</li>
+			<li>Human Performance Capture</li>
+			<li>Behavioral Modeling of Social Interactions</li>
+		</ul>
+		<!-- Previously, I was a postdoc working with <a href="https://www.mpi-inf.mpg.de/departments/visual-computing-and-artificial-intelligence">Christian Theobalt</a>. I was a Ph.D. student in the <a href="https://www.cse.iitb.ac.in/">Department of Computer Science</a>, IIT Bombay where I was advised by <a href="http://arjunjain.co.in/" target="_blank">Arjun Jain</a> and <a href="https://www.cse.iitb.ac.in/~ganesh">Ganesh Ramakrishnan</a> on research topics revolving around human pose estimation from images/video. Prior to this, I spent 
+		four beautiful undergrad years at the Indian Institute of Information Technology <a href="https://www.iiitdmj.ac.in/" target="_blank">(IIIT)</a> Jabalpur.  <br><br> -->
+		<paragraph> <font color="#55"><b>Open PhD Positions:</b></font> We are looking for outstanding PhD students to join us. If the topics above excite you, please reach out with an email containing your CV, transcripts, and a research statement describing your past work and your motivation behind pursuing a PhD.</p>
+		
+
+		</td>
 	</tr></tbody></table>
 	
+	<!-- Adding News Section
+	<h2>News</h2>
+	<hr>
+	<ul>
+		<li><b>Aug 2024:</b> Starting as a Reserach Group Leader  </li>
+		<li><b>Jul 2024:</b> Two papers accepted at ECCV 2024</li>
+		<li><b>Feb 2024:</b> One paper accepted at CVPR 2024</li>
+	</ul> -->
+
 	 
 	<h2>Research</h2>
 	<hr>     
