--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 	<td>
 		<paragraph><font color="red">News:</font> I started as a Research Group Leader at MPI for Informatics in August 2024.</paragraph>
 		<br><br>
-		I am leading the "3D Visual Intelligence" Research Group at the <a href="https://www.mpi-inf.mpg.de/home/">Max-Planck Institute for Informatics</a>. 
-		My research interests lie in the intersection of computer vision, computer graphics, multi-modal interactions. I am particularly interested in developing algorithms for 3D human performance capture and synthesis.
-		Some research questions that we are currently exploring include:<br>
+		I am leading the "3D Visual Intelligence" Research Group at the <a href="https://www.mpi-inf.mpg.de/home/" target="_blank">Max-Planck Institute for Informatics</a>. 
+		I am also associated with the Research Training Group on <a href="https://www.neuroexplicit.org/" target="_blank">Neuro-Explicit Models of Language, Vision, and Action</a> at <a href="https://www.uni-saarland.de/en/home.html" target="_blank">Saarland University</a>.
+		<br>
+		My research interests lie in the intersection of 3D computer vision, computer graphics, and multi-modal interactions. I am particularly interested in developing algorithms for 3D human performance capture and synthesis.
+		Some research questions that we explore include:<br>
 		<ul>
 			<li>Human Motion Synthesis for Animation and Robotics</li>
 			<li>Human-Object Interaction</li>
