--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 		<br><br>
 		I am leading the "3D Visual Intelligence" Research Group at the <a href="https://www.mpi-inf.mpg.de/home/" target="_blank">Max-Planck Institute for Informatics</a>. 
 		I am also associated with the Research Training Group on <a href="https://www.neuroexplicit.org/" target="_blank">Neuro-Explicit Models of Language, Vision, and Action</a> at <a href="https://www.uni-saarland.de/en/home.html" target="_blank">Saarland University</a>.
-		<br>
-		My research interests lie in the intersection of 3D computer vision, computer graphics, and multi-modal interactions. I am particularly interested in developing algorithms for 3D human performance capture and synthesis.
+		<br><br>
+		My research interests lie in the intersection of 3D computer vision, computer graphics and multi-modal interactions. I am particularly interested in developing algorithms for 3D human performance capture and synthesis.
 		Some research questions that we explore include:<br>
 		<ul>
 			<li>Human Motion Synthesis for Animation and Robotics</li>
