--- a/index.html
+++ b/index.html
@@ -68,6 +68,18 @@
 		<table cellspacing="10">
 			<tbody> 
 				<tr>
+					<td><img id="image" src="./index_files/betsu_betsu_teaser.png" width="200"></video></td>
+
+						
+					<td align="left"><a href="https://vcai.mpi-inf.mpg.de/projects/separable-recon/"><font size="4"><b>Betsu-Betsu: Separable 3D Reconstruction of Two Interacting Objects from Multiple Views</b></font></a><br>
+							Suhas Gopal, <i>Rishabh Dabral</i>, Vladislav Golyanik, Christian Theobalt<br>
+							<i>3D Vision (3DV) 2025, Singapore</i><br>
+							<a href="https://vcai.mpi-inf.mpg.de/projects/separable-recon/">[Project Page]</a><a href="https://arxiv.org/pdf/2502.13968">[Arxiv]</a>
+							<!-- <a href="https://vcai.mpi-inf.mpg.de/projects/ROAM/videos/main_video_website.mp4">[Video]</a> -->
+							<br>
+					</td>							
+				</tr>
+				<tr>
 					<td><img id="image" src="./index_files/metacap.png" width="200"></img></td>
 					<!-- <td><video autoplay muted width="200" loop>
 						<source src="./index_files/metacap.mp4" type="video/mp4"> -->
