--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 					<td align="left"><a href="https://vcai.mpi-inf.mpg.de/projects/RAG-Gesture/"><font size="4"><b>Retrieving Semantics from the Deep: an RAG Solution for Gesture Synthesis</b></font></a><br>
 							Muhammad Hamza Mughal, <i>Rishabh Dabral</i>, Merel C.J. Scholman, Vera Demberg, Christian Theobalt<br>
 							<i>Computer Vision and Pattern Recognition (CVPR), 2025, Nashville</i><br>
-							<a href="https://vcai.mpi-inf.mpg.de/projects/RAG-Gesture/">[Project Page]</a><a href="./index_files/bimart.pdf">[Paper]</a>
+							<a href="https://vcai.mpi-inf.mpg.de/projects/RAG-Gesture/">[Project Page]</a><a href="https://arxiv.org/abs/2412.06786">[Arxiv]</a>
 							<!-- <a href="https://vcai.mpi-inf.mpg.de/projects/ROAM/videos/main_video_website.mp4">[Video]</a> -->
 							<br>
 					</td>							
@@ -92,7 +92,7 @@
 					<td align="left"><a href="https://vcai.mpi-inf.mpg.de/projects/bimart/"><font size="4"><b>BimArt: A Unified Approach for the Synthesis of 3D Bimanual Interaction with Articulated Objects</b></font></a><br>
 							Wanyue Zhang, <i>Rishabh Dabral</i>, Vladislav Golyanik, Vasileios Choutas, Eduardo Elvarado, Thabo Beeler, Marc Habermann, Christian Theobalt<br>
 							<i>Computer Vision and Pattern Recognition (CVPR), 2025, Nashville</i><br>
-							<a href="https://vcai.mpi-inf.mpg.de/projects/bimart/">[Project Page]</a><a href="https://arxiv.org/abs/2412.06786">[Arxiv]</a>
+							<a href="https://vcai.mpi-inf.mpg.de/projects/bimart/">[Project Page]</a><a href="./index_files/bimart.pdf">[Paper]</a>
 							<!-- <a href="https://vcai.mpi-inf.mpg.de/projects/ROAM/videos/main_video_website.mp4">[Video]</a> -->
 							<br>
 					</td>							
