--- a/index.html
+++ b/index.html
@@ -344,6 +344,8 @@
 	<hr>
 	<table cellspacing="10">
 			<tbody>
+				<tr><td style="width: 160px">Winter 2024: </td><td>Co-Instructor for <a href="https://vcai.mpi-inf.mpg.de/teaching/vcai_lecture_WS2425/"">Advanced Topics in Neural Rendering and Reconstruction
+				</a></td></tr>
 				<tr><td style="width: 160px">Summer 2024: </td><td>Co-Instructor for <a href="https://vcai.mpi-inf.mpg.de/teaching/vcai_seminar_2024/topics.html">Classical Concepts of Computer Vision and
 					Computer Graphics in the Neural Age</a></td></tr>
 				<tr><td style="width: 160px">Spring 2019: </td><td>Teaching Assistant for <a href="https://github.com/cs763/Spring2019">CS763 - Computer Vision</a></td></tr>
