--- a/index.html
+++ b/index.html
@@ -53,21 +53,34 @@
 		</td>
 	</tr></tbody></table>
 	
-	<!-- Adding News Section
-	<h2>News</h2>
-	<hr>
-	<ul>
-		<li><b>Aug 2024:</b> Starting as a Reserach Group Leader  </li>
-		<li><b>Jul 2024:</b> Two papers accepted at ECCV 2024</li>
-		<li><b>Feb 2024:</b> One paper accepted at CVPR 2024</li>
-	</ul> -->
-
 	 
 	<h2>Research</h2>
 	<hr>     
 		<table cellspacing="10">
 			<tbody> 
-				
+				<tr>
+					<td><video  width="200" autoplay loop muted>
+						<source src="./index_files/Media8.mp4" type="video/mp4">
+						</video>
+					</td>
+
+						
+					<td align="left"><a href="https://anindita127.github.io/DuetGen/"><font size="4"><b>DuetGen: Music Driven Two-Person Dance Generation via Hierarchical Masked Modeling</b></font></a><br>
+							Anindita Ghosh, Bing Zhou, <i>Rishabh Dabral</i>, Jian Wang, Vladislav Golyanik, Christian Theobalt, Philipp Slusallek, Chuan Guo<br>
+							<i>ACM SIGGRAPH (Conference), 2025, Vancouver</i><br>
+							<a href="https://anindita127.github.io/DuetGen/">[Project Page]</a><a href="https://arxiv.org/abs/2506.18680">[Arxiv]</a>
+							<br>
+					</td>							
+				</tr>
+				<tr>
+					<td><img id="image" src="./index_files/ego40.png" width="200"></td>		
+					<td align="left"><a href="https://jianwang-mpi.github.io/ego4o/"><font size="4"><b>Ego4o: Egocentric Human Motion Capture and Understanding from Multi-Modal Input</b></font></a><br>
+							Jian Wang, <i>Rishabh Dabral</i>, Diogo Luvizon, Zhe Cao, Lingjie Liu, Thabo Beeler, Christian Theobalt<br>
+							<i>Computer Vision and Pattern Recognition (CVPR), 2025, Nashville</i><br>
+							<a href="https://jianwang-mpi.github.io/ego4o/">[Project Page]</a><a href="https://arxiv.org/abs/2504.08449">[Arxiv]</a>
+							<br>
+					</td>							
+				</tr>
 				<tr>
 					<td><video  width="200" autoplay loop muted>
 						<source src="./index_files/rag_gesture.mp4" type="video/mp4">
